# Align-Memory

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
CMake/: add_sources_to_target.cmake  configure_project_version.cmake  create_library.cmake  export_rules.cmake  generate_export_header.cmake  include_tests.cmake  package_configuration.cmake  set_build_output_directories.cmake  set_build_postfixes.cmake  set_c_standard.cmake  set_compiler_warnings.cmake  set_include_directories.cmake  set_install_directories.cmake  setup_project.cmake  validate_build_config.cmake
Configuration/: Config.cmake.in  config-shared.cmake.in  config-static.cmake.in  configure_version.h.in
Examples/: CMakeLists.txt  ex001.c  example-001.c  example-002.c
Scripts/: build-all-configs.bat  build-all.bat  build-configs.bat  build.bat  clean-all.bat  clean.bat  configure-all.bat  configure.bat  test-all-configs.bat  test-all.bat  test-configs.bat  test.bat
Sources/include/align_memory/: align_memory.h
Sources/src/align_memory/: align_memory.c  utility.h
Tests/: CMakeLists.txt  kdi_align_memory.c  kdi_align_memory_get_actual_address.c  kdi_align_memory_get_aligned_address.c  kdi_align_memory_get_allocation_size.c  kdi_get_actual_memory_from_aligned_memory.c  kdi_get_aligned_memory_backward.c  kdi_get_aligned_memory_forward.c  kdi_get_size_for_memory_alignment.c
